Closed Bug 134426 Opened 22 years ago Closed 22 years ago

Set image as wallpaper crashes Mozilla (when Mozilla Wallpaper.bmp is Read-Only)

Categories

(SeaMonkey :: UI Design, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: xpejchal, Assigned: yuanyi21)

References

Details

(Keywords: crash)

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.9+)
Gecko/20020329
BuildID:    2002032916

If I try to set an image as wallpaper with right click on it, Mozilla crashes.

Reproducible: Always
Steps to Reproduce:
1.load any webpage 
2.right click on a picture
3.select Set As Wallpaper

Actual Results:  Crash.

Expected Results:  No crash.

Talback crash ID TB4642117Y
reassigning
Assignee: morse → pavlov
Component: Image Management → ImageLib
QA Contact: tever → tpreston
WFM 2002033009 Win2k
WFM 2002031104 WinXP
-> xpapps.  hewitt?
Assignee: pavlov → sgehani
Component: ImageLib → XP Apps
QA Contact: tpreston → paw
changing qa contact
QA Contact: paw → tpreston
WFM win 2k build 2002033109, reporter, could you attach the image that is
causing the crash?
-> hewitt
Assignee: sgehani → hewitt
It crashes with every picture I suppose. For example with mozilla.org at this
page, Build 2002040503. 
Does it stop crashing if you use a new profile?
>Does it stop crashing if you use a new profile?
It crashes with new profile too.
wfm, moz 1.0 RC1, windows2000, SP2

*** Bug 142202 has been marked as a duplicate of this bug. ***
*** Bug 136111 has been marked as a duplicate of this bug. ***
dup of bug 136248?
Because of the great explanation by moebiusstrip2000@yahoo.ca, we now know how
to reproduce!  Crashed on win2k branch build 2002050506

Mozilla Build 2002031104
1. Goto any webpage with images and right-click on any image and choose "Set as
Wallpaper"
2. This will save the image as a BMP file in the root of the Windows directory
called "Mozilla Wallpaper.bmp"
3. Now goto the Windows directory and changed the file attributes of "Mozilla
Wallpaper.bmp" to "READ ONLY"
4. Goto any webpage with images and right-click on any image and choose "Set as
Wallpaper" Now Mozilla will Crash.


Talkback ID:6004023
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash
That's it. I am at school and I have no write access to Windows directory. I can
only write to my profile(home directory). It would help, if I could save the
picture there(or to Mozilla's profile?).  
Summary: Set image as wallpaper crashes Mozilla → Set image as wallpaper crashes Mozilla (when Mozilla Wallpaper.bmp is Read-Only)
*** Bug 146969 has been marked as a duplicate of this bug. ***
I think law owns the Windows code here...law, can you r= the fix?
I am running Windows XP with a "Limited User" account. "Limited User" accounts
do not have access to write to the "C:\Windows" directory so Mozilla crashes
everytime. I am using Mozilla 1.0 RC3.
I want to take this bug.
Joe, can you review my patch?
Assignee: hewitt → kyle.yuan
Comment on attachment 85031 [details] [diff] [review]
return FAILURE when output stream can't be opend

sr=hewitt
Attachment #85031 - Flags: superreview+
Attachment #85031 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
If it's true that a Windows XP "limited user" crashes everytime, maybe we should
fix it for 1.0 (or mention it in the Release Notes) ? At the very least, it
should be in 1.0.1 IMHO
Comment on attachment 85031 [details] [diff] [review]
return FAILURE when output stream can't be opend

a=chofmann for 1.0.1
Attachment #85031 - Flags: approval+
checked into 1.0 branch
adding branch resolution keyword.
Keywords: fixed1.0.1
Verified Fixed win XP branch build 2002062308
*** Bug 142434 has been marked as a duplicate of this bug. ***
*** Bug 156376 has been marked as a duplicate of this bug. ***
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: