Bug 134426 Set image as wallpaper crashes Mozilla (when Mozilla Wallpaper.bmp is Read-Only) r=timeless, sr=hewitt return FAILURE instead of crashing when output stream can't be opend